# FFmpegTest

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/cpp/: BaseChannel.h  CMakeLists.txt  EnjoyPlayer.cpp  EnjoyPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  XLog.h  native-lib.cpp
app/src/main/java/com/example/ffmpeg/: EnjoyPlayer.java  MainActivity.kt
app/src/main/java/com/example/ffmpeg/listener/: OnErrorListener.java  OnPrepareListener.java  OnProgressListener.java
gradle/wrapper/: gradle-wrapper.properties
